# aoc-2023-ocaml

./: LICENSE.md  README.md  aoc_2023_ocaml.opam  dune-project
lib/: chars.ml  dune  io.ml
test/: dune
